[gd_scene load_steps=3 format=3 uid="uid://duvgj06h7faqq"]

[ext_resource type="Theme" uid="uid://b06q5f3v0pumc" path="res://assets/themes/main_theme.tres" id="1_cmyxn"]
[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_mxon5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cmyxn")
script = ExtResource("1_mxon5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Dungeon Light"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayGameButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Play Game"

[node name="SelectLevelButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Select Level"

[node name="HowToPlayButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "How To Play
"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Options"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Quit
"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GameButtons/PlayGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameButtons/SelectLevelButton" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameButtons/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
